Revision history for Perl extension Buffer::Transactional

0.02
    - Removed MooseX::AttributeHelpers dependency in
      favor of the new Moose Native Traits.

0.01 Wed. Sept. 16, 2009
    - First release to an unsuspecting world!