@@ -4,5 +4,8 @@ Revision history for Perl extension Buffer::Transactional
     - Removed MooseX::AttributeHelpers dependency in
       favor of the new Moose Native Traits.
 
+    * Buffer::Transactional
+      - adding the txn_do method and tests
+
 0.01 Wed. Sept. 16, 2009
     - First release to an unsuspecting world!
